--- a/src/App.scss
+++ b/src/App.scss
@@ -7,18 +7,46 @@ a:active{
     color: #000;
 }
 
+body{
+    min-height: 100vh;
+}
+
+
 .Jumbotron{
     width: 100%;
     height: 30vh;
-    background-color: rgb(35, 112, 255);
-    display: flex;
+background: linear-gradient(90deg, #4b6cb7 0%, #182848 100%);    display: flex;
     justify-content: center;
     align-items: center;
     color : #fff;
+    text-shadow: 5px 5px 5px rgb(0, 0, 0);
+    font-family: 'Arial', cursive;
+    font-size: 20px;
 }
 
 .icon{
     height: 20px;
+}
+
+.icon--medium{
+    height: 100px;
+}
+
+@keyframes fade-in {
+    from{
+        opacity: 0;
+    }
+    to{
+        opacity: 1;
+    }
+}
+
+.tooltip:hover:before{
+    content : attr(href);
+    color : #fff;
+    background-color: #000;
+    margin : 4px;
+    animation: fade-in 2s;
 }
 
 .primaryButton{
@@ -29,4 +57,47 @@ a:active{
     color : #fff;
     border-radius: 5px;
     cursor: pointer;
+}
+
+.outerDiv{
+    padding : 10px;
+}
+
+.flex--center{
+    display: flex;
+    justify-content: center;
+}
+
+.grid--center{
+    display: grid;
+    justify-content: center;
+}
+
+.grid{
+    display: grid;
+}
+
+.form{
+    display: grid;
+    row-gap : 10px;
+
+    &>.formRow{
+        display: flex;
+        justify-content: space-between;
+        
+        align-items: center;
+        width: 90vw;
+
+        & > input{
+            width : 50vw;
+            border: none;
+            border-bottom :rgb(35, 112, 255) solid 1px;
+            outline: none;
+            font-size: 16px;
+            font-family: Arial, Helvetica, sans-serif;
+            padding : 5px;
+        }
+
+
+    }
 }
