--- a/src/Components/TilesContainer/TilesContainerStyles.scss
+++ b/src/Components/TilesContainer/TilesContainerStyles.scss
@@ -1,6 +1,6 @@
 .tilesContainer{
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-columns: auto;
     justify-items: center;
     align-items: center;
     margin-top: 5vh;
@@ -10,10 +10,11 @@
 .tile{
     padding : 10px;
     display: flex;
+    justify-content: space-evenly;
+    font-size: 17px;
     box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.329);
-    width: 100px;
-    height : 100px;
+    width: 200px;
+    height : 80px;
     display: flex;
-    justify-content: center;
     align-items: center;
 }
