--- a/src/Components/CompactNav/CompactNav.scss
+++ b/src/Components/CompactNav/CompactNav.scss
@@ -6,6 +6,7 @@
     justify-content: space-between;
     flex-grow: 0.0001;
     transition: all 2s ease;
+    box-shadow: 0px 5px 5px 2px rgba(124, 124, 124, 0.562);
     &>.CompactNav--link{
         flex-grow: 1;
     }
