--- a/src/Pages/Tasks/TasksStyles.scss
+++ b/src/Pages/Tasks/TasksStyles.scss
@@ -39,6 +39,7 @@
     display: grid;
     grid-template-columns: 35% auto;
     width: 100vw;
+    padding-bottom: 20px;
 }
 
 .taskLeftDiv{
@@ -49,8 +50,14 @@
     align-items: center;
     border-right: solid 1px rgba(197, 197, 197, 0.815);
     padding-right : 10px;
+    text-align: center;
 }
 
 .taskRightDiv{
     padding-left : 10px;
+}
+
+.taskEditIcon{
+    float: right;
+    margin-right : 10px;
 }
