--- a/src/Components/Calculator/CalculatorStyles.scss
+++ b/src/Components/Calculator/CalculatorStyles.scss
@@ -1,8 +1,93 @@
 .calcOuter{
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    border: solid 2px #000;
+    border-radius: 5px;
+    width: 80vw;
+    min-width: fit-content;
 }
 
 .calcScreen{
-    background-color: #000;
+    background-color: rgb(35, 112, 255);
+    min-height: 60px;
+    color : #fff;
+    display: grid;
+    border-radius: 5px;
+    margin : 10px;
+
+    
+    & > .calcScreenNewContent{
+        display: flex;
+        justify-content: right;
+        width: 100%;
+    }
+}
+.calcScreenInput{
+        background-color: rgb(35, 112, 255);
+        color : #fff;
+        border: none;
+        width: 100%;
+        text-align: end;
+        font-size: 30px;
+    }
+
+.calcEraseButton{
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+    background-color: rgb(35, 112, 255);
+    fill: #fff;
+}
+
+.calcBody{
+    display: flex;
+    justify-content: center;
+    padding : 15px;
+    column-gap: 10px;
+}
+
+
+
+.calcPad{
+    display: grid;
+    grid-template-columns: auto auto auto;
+    gap : 10px;
+}
+
+.calcPadButton{
+    box-shadow: 2px 2px 2px 2px rgba(126, 126, 126, 0.65);
+    height: 60px;
+    width: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 26px;
+    font-weight: 600;
+    border-radius: 5px;
+    background-color: #fff;
+    border: none;
+    cursor: pointer;
+}
+
+.calcRightOps{
+    display: grid;
+    grid-template-rows: 50% auto auto;
+    margin-left : 5px;
+    row-gap: 5px;
+    .calcPadButton{
+        height: 100%;
+    }
+}
+
+
+@media screen and (min-width : 750px) {
+    .calcBody{
+        width: fit-content;
+        justify-self: center;
+    }
+    .calcScreen{
+        width: fit-content;
+    }
+    .calcOuter{
+        width: fit-content;
+    }
 }
