--- a/src/Components/CompactNav/CompactNav.scss
+++ b/src/Components/CompactNav/CompactNav.scss
@@ -17,3 +17,11 @@
         flex-grow: 1;
     }
 }
+
+
+@media screen and (min-width: 750px) {
+    .compactNav{
+        box-shadow: none;
+        padding : 2px 10px;
+    }
+}
