--- a/src/App.scss
+++ b/src/App.scss
@@ -15,21 +15,37 @@ body{
     min-height: 100vh;
 }
 
+.font--white{
+    color: #fff;
+}
 
 .Jumbotron{
+    display: flex;
+    flex-direction: column;
+    grid-template-columns: auto;
     width: 100%;
     height: 30vh;
-background: linear-gradient(90deg, #4b6cb7 0%, #182848 100%);    display: flex;
+    background: linear-gradient(90deg, #4b6cb7 0%, #182848 100%);
     justify-content: center;
     align-items: center;
     color : #fff;
     text-shadow: 5px 5px 5px rgb(0, 0, 0);
     font-family: 'Arial', cursive;
     font-size: 20px;
+
+    &>.userItem{
+        position: absolute;
+        right : 10px;
+        top : 10px;
+        margin : 15px;
+        color : #fff;
+    }
 }
 
 .icon{
-    height: 20px;
+    height: 15px;
+    fill : #fff;
+    width: 20px;
 }
 
 .icon--medium{
@@ -140,6 +156,22 @@ background: linear-gradient(90deg, #4b6cb7 0%, #182848 100%);    display: flex;
     text-underline-offset: 4px;
 }
 
+.progress {
+    min-height: 15px;
+    width: 150px;
+    background-color :rgb(253, 253, 253);
+    border: #000 solid 1px;
+    border-radius: 0;
+    transition: all 300ms ease;
+    justify-self: center;
+    border-radius: 5px;
+    &>.progressInner{
+        background-color :rgb(35, 112, 255);
+        transition: all 300ms ease;
+        min-height: 15px;
+        width: 10%;
+    }
+}
 
 
 // @media screen and (min-width : 750px) {
