--- a/src/Components/Calculator/CalculatorStyles.scss
+++ b/src/Components/Calculator/CalculatorStyles.scss
@@ -78,6 +78,11 @@
     }
 }
 
+.calcNextOperator{
+    font-size: 20px;
+    margin : 0px 5px;
+}
+
 
 @media screen and (min-width : 750px) {
     .calcBody{
