--- a/src/Components/CompactNav/CompactNav.scss
+++ b/src/Components/CompactNav/CompactNav.scss
@@ -6,6 +6,8 @@
     justify-content: space-between;
     flex-grow: 0.0001;
     transition: all 2s ease;
+    background: linear-gradient(90deg, #4b6cb7 0%, #182848 100%);
+    color : #fff;
     box-shadow: 0px 5px 5px 2px rgba(124, 124, 124, 0.562);
     &>.CompactNav--link{
         flex-grow: 1;
@@ -14,7 +16,8 @@
         font-size: large;
         font-weight: 600;
         justify-items: left;
-        flex-grow: 1;
+        flex-grow: 16;
+        text-align: center;
     }
 }
 
