--- a/src/Pages/Authentication/AuthenticationStyles.scss
+++ b/src/Pages/Authentication/AuthenticationStyles.scss
@@ -4,6 +4,19 @@
     padding : 20px 10px;
 }
 
+.alreadyLoggedIn{
+    width: 100vw;
+    min-height: 100vh;
+    display: grid;
+    justify-content: center;
+    align-content: flex-start;
+    align-items: center;
+    & > p{
+        font-size: 20px;
+        text-align: center;
+    }
+}
+
 .expandableFrom{
     opacity: 1;
    
