--- a/src/Pages/Tasks/TasksStyles.scss
+++ b/src/Pages/Tasks/TasksStyles.scss
@@ -40,6 +40,7 @@
     grid-template-columns: 35% auto;
     width: 100vw;
     padding-bottom: 20px;
+    box-shadow: 2px 2px 2px 2px rgba(136, 136, 136, 0.555);
 }
 
 .taskLeftDiv{
