--- a/src/App.scss
+++ b/src/App.scss
@@ -13,6 +13,7 @@ a:active{
 
 body{
     min-height: 100vh;
+    min-width: 350px;
 }
 
 .font--white{
@@ -38,8 +39,27 @@ body{
         right : 10px;
         top : 10px;
         margin : 15px;
+        cursor: pointer;
         color : #fff;
     }
+}
+
+.formGrid{
+    display: grid;
+    grid-template-columns: auto;
+    justify-items: center;
+    align-items: center;
+    row-gap: 10px;
+}
+
+.formTextArea{
+    border-radius: 5px;   
+    resize: vertical;
+    width: 100%;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+    padding : 10px;
+    min-height: 100px;
 }
 
 .icon{
@@ -134,6 +154,29 @@ body{
     }
 }
 
+.filtersDiv{
+    display: flex;
+    align-items: center;
+    height: fit-content;
+    padding : 10px;
+    gap : 10px;
+    margin: 10px 10px 10px 10px;
+    box-shadow: 2px 2px 2px 2px rgba(117, 117, 117, 0.582);
+    border-radius: 10px;    
+    font-family: Arial, Helvetica, sans-serif;
+}
+.filterButton{
+    border : none;
+    border-radius: 10px;
+    padding : 8px;
+    background-color: #fff;
+    box-shadow: 2px 2px 2px 2px rgba(117, 117, 117, 0.582);
+    cursor: pointer;
+    color : #000;
+    background-color: #fff;
+    transition: all 0.5s ease;
+}
+
 .alertBanner{
     display: flex;
     justify-content: center;
@@ -148,6 +191,7 @@ body{
     margin : 10px;
     position: sticky;
     top : 0;
+    transition: all 0.1s ease;
    
 }
 
