--- a/src/Pages/Tasks/TasksStyles.scss
+++ b/src/Pages/Tasks/TasksStyles.scss
@@ -41,6 +41,7 @@
     width: 100vw;
     padding-bottom: 20px;
     box-shadow: 2px 2px 2px 2px rgba(136, 136, 136, 0.555);
+    min-width: 350px;
 }
 
 .taskLeftDiv{
