--- a/src/Components/PriorityItems/PriorityItemStyles.scss
+++ b/src/Components/PriorityItems/PriorityItemStyles.scss
@@ -6,6 +6,7 @@
     box-shadow: 2px 2px 2px 2px rgba(136, 136, 136, 0.555);
     padding : 5px;
     min-width: 350px;
+    background-color: #fff;
 }
 
 .filterButtonIcon{
