--- a/src/Pages/Tasks/TasksStyles.scss
+++ b/src/Pages/Tasks/TasksStyles.scss
@@ -53,6 +53,7 @@
     border-right: solid 1px rgba(197, 197, 197, 0.815);
     padding-right : 10px;
     text-align: center;
+    padding-bottom : 10px;
 }
 
 .taskRightDiv{
