--- a/src/App.scss
+++ b/src/App.scss
@@ -179,6 +179,7 @@ body{
     box-shadow: 2px 2px 2px 2px rgba(117, 117, 117, 0.582);
     border-radius: 10px;    
     font-family: Arial, Helvetica, sans-serif;
+    transition: all 1s ease forwards;
 }
 .filterButton{
     border : none;
@@ -234,9 +235,40 @@ body{
 
 
 .sliderOuter{
-    width : 100px;
-    height: 50px;
-    background-color: #182848;
+    display: flex;
+    align-items: center;
+    width : 40px;
+    height: 20px;
+    border-radius : 15px;
+    background-color: #fff;
+    border : solid 1px #000;
+    padding : 1px;
+    cursor: pointer;
+    transition: all 0.2s ease;
+}
+.sliderInner{
+    width: 20px;
+    height :20px;
+    background-color: rgb(35, 112, 255);
+    border-radius: 100%;
+
+}
+
+@keyframes slideToRight {
+    0%{
+        transform: translateX(0px);
+    }
+    100%{
+        transform: translateX(20px);
+    }
+}
+@keyframes slideToLeft {
+    100%{
+        transform: translateX(0px);
+    }
+    0%{
+        transform: translateX(20px);
+    }
 }
 
 
