--- a/src/Components/PriorityItems/PriorityItemStyles.scss
+++ b/src/Components/PriorityItems/PriorityItemStyles.scss
@@ -18,26 +18,27 @@
 }
 
 .expandableDiv{
-    background-color: red;
-    max-height: fit-content;
-    
-    transition: all 2s ease;
+    background-color: transparent;  
+    overflow: hidden;  
+}
+
+.expandable--inner{
 }
 
 @keyframes expandDiv {
     0%{
-        max-height: 0;
+        height: 0px;
     }
     100%{
-        max-height: max-content;
-    }
+        height: 80px;
+   }
 }
 
 @keyframes closeDiv {
+     0%{
+        height: 80px;
+    }
     100%{
-        max-height: 0;
-    }
-    0%{
-        max-height: max-content;
-    }
+        height: 0px;
+   }
 }
