added logo, hooks, etc.

--- a/src/Pages/Tasks/TasksStyles.scss
+++ b/src/Pages/Tasks/TasksStyles.scss
@@ -54,6 +54,8 @@
     padding-right : 10px;
     text-align: center;
     padding-bottom : 10px;
+    word-wrap: break-word;
+    overflow: auto;
 }
 
 .taskRightDiv{
