--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,3 @@
-*{
-    user-select: none;
-    
-}
 
 ::-webkit-calendar-picker-indicator { 
     background: #4b6cb7;
@@ -25,6 +21,7 @@ a:active{
 body{
     min-height: 100vh;
     min-width: 350px;
+
 }
 
 .bodyDiv{
@@ -41,7 +38,7 @@ body{
     grid-template-columns: auto;
     width: 100%;
     height: 30vh;
-    background: linear-gradient(90deg, #4b6cb7 0%, #182848 100%);
+    background: #2a3d62;
     justify-content: center;
     align-items: center;
     color : #fff;
@@ -147,11 +144,13 @@ body{
     display: grid;
     row-gap : 20px;
     &>.formRow{
-        display: flex;
-        justify-content: space-between;
+        display: grid;
+        grid-template-columns: 35% 5% auto;
         align-items: center;
         width: 90vw;
-
+        padding: 2px;
+        gap: 2px;
+        text-align: center;
         & > input{
             width : 50vw;
             border: none;
@@ -161,8 +160,6 @@ body{
             font-family: Arial, Helvetica, sans-serif;
             padding : 5px;
         }
-
-
     }
     &> button{
         margin-top : 20px;
@@ -237,8 +234,8 @@ body{
 .sliderOuter{
     display: flex;
     align-items: center;
-    width : 40px;
-    height: 20px;
+    min-width : 40px;
+    min-height: 20px;
     border-radius : 15px;
     background-color: #fff;
     border : solid 1px #000;
