--- a/src/Components/CompactNav/CompactNav.scss
+++ b/src/Components/CompactNav/CompactNav.scss
@@ -8,7 +8,7 @@
     justify-content: space-between;
     flex-grow: 0.0001;
     transition: all 2s ease;
-    background: linear-gradient(90deg, #4b6cb7 0%, #182848 100%);
+    background: #2a3d62;
     color : #fff;
     box-shadow: 0px 5px 5px 2px rgba(124, 124, 124, 0.562);
     &>.CompactNav--link{
