--- a/src/Components/CompactNav/CompactNav.scss
+++ b/src/Components/CompactNav/CompactNav.scss
@@ -10,6 +10,7 @@
     transition: all 2s ease;
     background: #2a3d62;
     color : #fff;
+    z-index: 100;
     box-shadow: 0px 5px 5px 2px rgba(124, 124, 124, 0.562);
     &>.CompactNav--link{
         flex-grow: 1;
